CloudFormation_Lab1-ver7.yml
Description: CloudFormation to create an EC2 Instance with Apache and PHP. Also MySQL

Parameters: 
  EC2InstanceType:
    Description: EC2 instance type
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t2.small
      - t2.medium
      # Add other instance types as needed
    ConstraintDescription: must be a valid EC2 instance type.
  KeyName:
    Description: Key pair to use 
    Type: AWS::EC2::KeyPair::KeyName
    Default: L00157158-IAC-keypair-ie
  DBPassword:
    Description: The database admin password
    Type: String
    NoEcho: true
    MinLength: 8
    MaxLength: 41
    AllowedPattern: '[a-zA-Z0-9]*'
    ConstraintDescription: Must contain only alphanumeric characters, and be 8 to 41 characters in length.

Resources:

  # Define security group -> SSH and HTTP/HTTPS
  SSHSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH and HTTP/HTTPS access
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0  # allows SSH from any IP.
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0  # allows HTTP from any IP.
        - IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
          CidrIp: 0.0.0.0/0  # allows HTTPS from any IP.

  # Define the security group for MySQL
  MySQLSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow MySQL access
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '3306'
          ToPort: '3306'
          SourceSecurityGroupId: !GetAtt SSHSecurityGroup.GroupId

  L00157158EC2Lab1:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref EC2InstanceType
      ImageId: "ami-0ea0f26a6d50850c5"
      KeyName: !Ref KeyName
      Tags:
        - Key: "Name"
          Value: "IAC-EC2-LAB-1"
        - Key: "Purpose"
          Value: "PGDIP-IAC"
      SecurityGroups:
        - !Ref SSHSecurityGroup
      UserData: 
        Fn::Base64: !Sub |
          #!/bin/bash
          # Error handling
          set -e
          # Start cfn-init
          /opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --resource L00157158EC2Lab1 --region ${AWS::Region}
          # No additional commands needed; cfn-init will create the phpinfo.php file  
    Metadata:
      AWS::CloudFormation::Init:
        config:
          packages:
            yum:
              mysql: []
              httpd: []
              php: []
              php-mysqlnd: []
          services:
            sysvinit:
              httpd:
                enabled: "true"
                ensureRunning: "true"
          files:
            "/var/www/html/phpinfo.php":
              content: "<?php phpinfo(); ?>"
              mode: "000644"
              owner: "root"
              group: "root"


  # MySQL RDS instance
  MySQLDB:
    Type: "AWS::RDS::DBInstance"
    Properties:
      Engine: "mysql"
      MasterUsername: "admin"
      MasterUserPassword: !Ref DBPassword
      DBInstanceClass: "db.t2.micro"
      AllocatedStorage: "20"
      VPCSecurityGroups:
        - !GetAtt MySQLSecurityGroup.GroupId

Outputs:
  OutLab1Demo:
    Description: EC2 Instance
    Value: !Ref L00157158EC2Lab1
    Export:
      Name: ATUEC2DemoVal
  SSHSecurityGroupID:
    Description: The ID of the security group
    Value: !Ref SSHSecurityGroup
  MySQLSecurityGroup:
    Description: The ID of the SQL security group
    Value: !Ref MySQLSecurityGroup    
  MySQLDBEndpoint:
    Description: Endpoint of the MySQL DB
    Value: !GetAtt MySQLDB.Endpoint.Address
  WebsiteURL:
    Description: URL of the website
    Value: !Sub "http://${L00157158EC2Lab1.PublicDnsName}/"
